--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss-pxtorem": "^5.1.1",
     "style-resources-loader": "^1.3.3",
     "vant": "^2.8.3",
+    "vconsole": "^3.3.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "weixin-js-sdk": "^1.6.0"
