--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.24.0",
     "postcss-pxtorem": "^5.1.1",
     "style-resources-loader": "^1.3.3",
+    "timers": "^0.1.1",
     "vant": "^2.8.3",
     "vconsole": "^3.3.4",
     "vue": "^2.6.11",
@@ -36,6 +37,7 @@
     "eslint-plugin-vue": "^6.1.2",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "video.js": "^7.8.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
