--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vconsole": "^3.3.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-wechat-title": "^2.0.5",
     "weixin-js-sdk": "^1.6.0"
   },
   "devDependencies": {
